--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,6 +10,14 @@ body{
 	font-size: 12px;
 }
 
+input::-webkit-contacts-auto-fill-button {
+  visibility: hidden;
+  display: none !important;
+  pointer-events: none;
+  position: absolute;
+  right: 0;
+}
+
 #bg{
 	position: absolute;
 	height: 100vh;
