--- a/stylesheet.css
+++ b/stylesheet.css
@@ -133,7 +133,7 @@ input::-webkit-contacts-auto-fill-button {
 	border-radius: 4px;
 	border:none;
 	background: rgba(255,255,255,.3);
-	opacity: .5;
+	/*opacity: .5;*/
 	padding: 3px 15px;
 	position: relative;
 	left: -12px;
