--- a/stylesheet.css
+++ b/stylesheet.css
@@ -62,6 +62,7 @@ h1{
 #login a{
 	text-decoration: none;
 	color: white;
+	font-family: 13px;
 }
 
 #login:hover{
@@ -114,7 +115,6 @@ h1{
 	border: 2px solid #fff;
 	background: transparent;
 	color: #fff;
-	font-size: 
 }
 
 #hero_text button:hover{
