--- a/css/main.css
+++ b/css/main.css
@@ -1510,7 +1510,7 @@ header .header-logo a {
   width: 100%;
   height: 100%;
   background-color: #151515;
-  background-image: url(../images/hero-bg5.jpg);
+  background-image: url(../images/titelbild-skydance.jpg);
   background-repeat: no-repeat;
   background-position: center 30%;
   -webkit-background-size: cover;
