hero image, background-size: cover

--- a/css/main.css
+++ b/css/main.css
@@ -1513,6 +1513,7 @@ header .header-logo a {
   background-image: url(../images/titelbild-skydance.jpg);
   background-repeat: no-repeat;
   background-position: center 30%;
+  background-size: cover;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
