--- a/css/main.css
+++ b/css/main.css
@@ -1517,7 +1517,7 @@ header .header-logo a {
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
-  background-attachment: fixed;
+  /*background-attachment: fixed;*/
   min-height: 804px;
   position: relative;
 
