--- a/css/main.css
+++ b/css/main.css
@@ -1513,11 +1513,9 @@ header .header-logo a {
   background-image: url(../images/titelbild-skydance.jpg);
   background-repeat: no-repeat;
   background-position: center 30%;
-  background-size: cover;
   -webkit-background-size: cover;
   -moz-background-size: cover;
-  background-size: cover;
-  /*background-attachment: fixed;*/
+  background-attachment: fixed;
   min-height: 804px;
   position: relative;
 
