--- a/css/main.css
+++ b/css/main.css
@@ -1514,10 +1514,10 @@ header .header-logo a {
   background-repeat: no-repeat;
   /*background-position: center 30%;*/
   background-position: bottom 100%;
-  background-size: cover;
+  /*background-size: cover;*/
   -webkit-background-size: cover;
   -moz-background-size: cover;
-  background-attachment: fixed;
+  /*background-attachment: fixed;*/
   min-height: 804px;
   position: relative;
 
