--- a/css/main.css
+++ b/css/main.css
@@ -1507,19 +1507,12 @@ header .header-logo a {
  *
  * ------------------------------------------------------------------- */
 #home {
-  width: 100%;
-  height: 100%;
-  background-color: #151515;
-  background-image: url(../images/titelbild-skydance.jpg);
-  background-repeat: no-repeat;
-  /*background-position: center 30%;*/
-  background-position: bottom 100%;
-  /*background-size: cover;*/
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  /*background-attachment: fixed;*/
-  min-height: 804px;
-  position: relative;
+  min-height: 800px;
+  width: 100%; 
+  background-image: url("../images/titelbild-skydance.jpg");
+  background-position: 0%, 0%, 50%, 50%;
+  background-attachment: scroll, fixed;
+  background-size: auto, cover;
 
 }
 #home .overlay {
