--- a/css/main.css
+++ b/css/main.css
@@ -1510,11 +1510,10 @@ header .header-logo a {
   width: 100%;
   height: 100%;
   background-color: #151515;
-  background-image: url(../images/titelbild-skydance.jpg);
+  background-image: url(../images/titelbild-skydance.png);
   background-repeat: no-repeat;
-  /*background-position: center 30%;*/
-  background-position: bottom 100%;
-  /*background-size: cover;*/
+  background-position: center 80%;
+  background-size: cover;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   /*background-attachment: fixed;*/
