--- a/css/main.css
+++ b/css/main.css
@@ -2797,6 +2797,17 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
   }
 }
 
+/* Test: für iOs kein fixed hero-image */
+@supports (-webkit-overflow-scrolling: touch) {
+  /*background-attachment: fixed;*/
+}
+
+@supports not (-webkit-overflow-scrolling: touch) {
+  #home {
+    background-attachment: fixed;
+  }
+}
+
 
 /* ===================================================================
  *  17. footer - (_layout.scss)
