--- a/css/main.css
+++ b/css/main.css
@@ -2815,10 +2815,12 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
  *
  * ------------------------------------------------------------------- */
 footer {
-  margin: 0 0 5.4rem 0;
+  /* margin: 0 0 5.4rem 0; */
+  margin: 0;
   padding: 0;
   font-size: 1.5rem;
   color: rgba(255, 255, 255, 0.4);
+  padding-bottom: 5.4rem;
 }
 footer a, footer a:visited {
   color: #FFFFFF;
@@ -2869,6 +2871,7 @@ footer h4.h05::after {
 .footer-main .subscribe-form {
   position: relative;
 }
+
 
 /* footer bottom
  * --------------------------------- */
